--- a/RevenueCatUI/Resources/en.lproj/Localizable.strings
+++ b/RevenueCatUI/Resources/en.lproj/Localizable.strings
@@ -17,14 +17,14 @@
 "%d%% off" = "%d%% off";
 "Continue" = "Continue";
 "Default_offer_details_with_intro_offer" = "Start your {{ sub_offer_duration }} trial, then {{ total_price_and_per_month }}.";
-"Error when requesting refund, try again" = "Error when requesting refund, try again"
-"Refund granted successfully!" = "Refund granted successfully!"
-"Refund canceled" = "Refund canceled"
-"Refund request status: %@" = "Refund request status: %@"
-"Let’s take a look! We’re going to check your Apple account for missing purchases." = "Let’s take a look! We’re going to check your Apple account for missing purchases."
-"Check past purchases" = "Check past purchases"
-"Cancel" = "Cancel"
-"Purchases recovered!" = "Purchases recovered!"
-"We applied the previously purchased items to your account. Sorry for the inconvenience." = "We applied the previously purchased items to your account. Sorry for the inconvenience."
-"Dismiss" = "Dismiss"
-"We couldn’t find any additional purchases under this account. \n\nContact support for assistance if you think this is an error." = "We couldn’t find any additional purchases under this account. \n\nContact support for assistance if you think this is an error."
+"Error when requesting refund, try again" = "Error when requesting refund, try again";
+"Refund granted successfully!" = "Refund granted successfully!";
+"Refund canceled" = "Refund canceled";
+"Refund request status: %@" = "Refund request status: %@";
+"Let’s take a look! We’re going to check your Apple account for missing purchases." = "Let’s take a look! We’re going to check your Apple account for missing purchases.";
+"Check past purchases" = "Check past purchases";
+"Cancel" = "Cancel";
+"Purchases recovered!" = "Purchases recovered!";
+"We applied the previously purchased items to your account. Sorry for the inconvenience." = "We applied the previously purchased items to your account. Sorry for the inconvenience.";
+"Dismiss" = "Dismiss";
+"We couldn’t find any additional purchases under this account. \n\nContact support for assistance if you think this is an error." = "We couldn’t find any additional purchases under this account. \n\nContact support for assistance if you think this is an error.";
