--- a/RevenueCatUI/Resources/en_GB.lproj/Localizable.strings
+++ b/RevenueCatUI/Resources/en_GB.lproj/Localizable.strings
@@ -17,3 +17,4 @@
 "%d%% off" = "%d%% off";
 "Continue" = "Continue";
 "Default_offer_details_with_intro_offer" = "Start your {{ sub_offer_duration }} trial, then {{ total_price_and_per_month }}.";
+"then_price_per_period" = "then %@";
