--- a/RevenueCatUI/Resources/es_419.lproj/Localizable.strings
+++ b/RevenueCatUI/Resources/es_419.lproj/Localizable.strings
@@ -17,3 +17,4 @@
 "%d%% off" = "%d%% de descuento";
 "Continue" = "Continuar";
 "Default_offer_details_with_intro_offer" = "{{ sub_offer_duration }} gratis y luego {{ total_price_and_per_month }}.";
+"then_price_per_period" = "y luego %@";
