Makes the literal strings localizable.

--- a/RevenueCatUI/Resources/en.lproj/Localizable.strings
+++ b/RevenueCatUI/Resources/en.lproj/Localizable.strings
@@ -29,3 +29,6 @@
 "Dismiss" = "Dismiss";
 "We couldn’t find any additional purchases under this account. \n\nContact support for assistance if you think this is an error." = "We couldn’t find any additional purchases under this account. \n\nContact support for assistance if you think this is an error.";
 "then_price_per_period" = "then %@";
+"Billing cycle" = "Billing cycle";
+"Current price" = "Current price";
+"Refund status" = "Refund status";
