Makes the strings in SubscriptionInformation localizable.

--- a/RevenueCatUI/Resources/en.lproj/Localizable.strings
+++ b/RevenueCatUI/Resources/en.lproj/Localizable.strings
@@ -31,4 +31,10 @@
 "then_price_per_period" = "then %@";
 "Billing cycle" = "Billing cycle";
 "Current price" = "Current price";
+"Expired" = "Expired";
+"Expires" = "Expires";
+"Next billing date" = "Next billing date";
 "Refund status" = "Refund status";
+"This is your subscription with the earliest billing date." = "This is your subscription with the earliest billing date.";
+"This is your subscription with the earliest expiration date." = "This is your subscription with the earliest expiration date.";
+"This subscription has expired." = "This subscription has expired.";
